[gd_scene load_steps=10 format=3 uid="uid://cfojlnb4ynmtm"]

[ext_resource type="Script" path="res://scripts/skills_menu.gd" id="1_sm26d"]
[ext_resource type="FontFile" uid="uid://dvjq4m431o2pu" path="res://fonts/Code Vein Fonts/Roboto-Regular.ttf" id="2_35or6"]
[ext_resource type="Texture2D" uid="uid://dt5gwa1lpbmwe" path="res://media/sprites/menu/menu_ready_icon/ready_normal_cross.png" id="4_dln20"]
[ext_resource type="Texture2D" uid="uid://b73t1b4tu4n5m" path="res://media/sprites/menu/menu_ready_icon/ready_normal_cross_orange.png" id="5_8b3q0"]
[ext_resource type="PackedScene" uid="uid://clsmp4hvp8olb" path="res://nodes/very_cool_buttons/very_cool_double_fireball_button.tscn" id="5_g7drb"]
[ext_resource type="PackedScene" uid="uid://cr7oyuywcdt5v" path="res://nodes/very_cool_buttons/very_cool_heart_charge_button.tscn" id="6_ycvci"]
[ext_resource type="AudioStream" uid="uid://gsdkjmi240ja" path="res://media/sfx/menu_cursor_move.wav" id="7_kovbr"]

[sub_resource type="Animation" id="Animation_jbwpw"]
resource_name = "open_sfx"
length = 0.1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_kovbr")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_552ek"]
_data = {
"open_sfx": SubResource("Animation_jbwpw")
}

[node name="SkillMenu" type="Node2D"]
script = ExtResource("1_sm26d")

[node name="BackPanel" type="Panel" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
metadata/_edit_lock_ = true

[node name="DescriptionPanel" type="Panel" parent="."]
offset_left = 960.0
offset_top = 32.0
offset_right = 1896.0
offset_bottom = 1048.0
metadata/_edit_lock_ = true

[node name="DescriptionText" type="RichTextLabel" parent="."]
offset_left = 992.0
offset_top = 64.0
offset_right = 1872.0
offset_bottom = 1032.0
theme_override_fonts/normal_font = ExtResource("2_35or6")
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[color=Violet ]
You can choose your skills from icons to the left.
☆ｏ(＞＜；)○[/color]
"

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 192.0
offset_bottom = 192.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("4_dln20")
texture_hover = ExtResource("5_8b3q0")

[node name="SkillButtons" type="Node2D" parent="."]

[node name="DoubleFireballButton" parent="SkillButtons" instance=ExtResource("5_g7drb")]
offset_left = 352.0
offset_top = 120.0
offset_right = 864.0
offset_bottom = 632.0
scale = Vector2(0.5, 0.5)

[node name="HeartChargeButton" parent="SkillButtons" instance=ExtResource("6_ycvci")]
offset_left = 360.0
offset_top = 432.0
offset_right = 872.0
offset_bottom = 944.0
scale = Vector2(0.5, 0.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_552ek")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="toggled" from="SkillButtons/DoubleFireballButton" to="." method="_on_double_fireball_button_toggled"]
[connection signal="toggled" from="SkillButtons/HeartChargeButton" to="." method="_on_texture_button_toggled"]
